<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/def_margin"
    tools:context=".NewPostActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="@dimen/post_title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck"
        android:layout_marginBottom="@dimen/min_margin"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/min_target_height"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textSize="@dimen/post_title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_title"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck"
        android:layout_marginBottom="@dimen/min_margin"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:minHeight="@dimen/min_target_height"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_body"
        android:textSize="@dimen/post_title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_body"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck"
        android:layout_marginBottom="@dimen/min_margin"
        android:hint="@string/hint_body"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/min_target_height" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_image"
        android:textSize="@dimen/post_title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextContrastCheck"
        android:autofillHints=""
        android:layout_marginBottom="@dimen/min_margin"
        android:hint="@string/hint_url_image"
        android:minHeight="@dimen/min_target_height"
        android:inputType="textUri" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_post" />
</LinearLayout>