<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly_post_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            tools:ignore="UseCompoundDrawables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/min_margin"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_post_user"
                android:contentDescription="@string/user_descr"
                android:layout_width="@dimen/user_photo_dim"
                android:layout_height="@dimen/user_photo_dim"
                app:srcCompat="@drawable/ic_account" />

            <TextView
                android:id="@+id/tv_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/min_margin"
                android:paddingEnd="@dimen/min_margin"
                android:textSize="@dimen/post_title_size"
                android:textStyle="bold"
                tools:text="@string/title_example" />

        </LinearLayout>
        <ImageView
            android:contentDescription="@string/photo_descr"
            android:id="@+id/img_post_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/post_example" />
        <TextView
            android:id="@+id/tv_post_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/min_margin"
            android:textSize="@dimen/post_body_size"
            tools:text="@string/lorem_ipsum_2" />


    </LinearLayout>
</androidx.cardview.widget.CardView>