<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:padding="@dimen/min_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/user_descr"
                android:layout_gravity="center_vertical"
                android:id="@+id/img_post_user"
                app:srcCompat="@drawable/ic_account"
                android:layout_width="@dimen/user_photo_dim"
                android:layout_height="@dimen/user_photo_dim"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_post_email"
                    tools:text="username@gmail.com"
                    android:textStyle="bold"
                    android:textSize="@dimen/username_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_post_date"
                    android:textSize="@dimen/username_size"
                    tools:text="28/07/2022 15:31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:paddingStart="@dimen/min_margin"
            android:paddingEnd="@dimen/min_margin"
            android:id="@+id/tv_post_title"
            tools:text="@string/title_example"
            android:textSize="@dimen/post_title_size"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingStart="@dimen/min_margin"
            android:paddingEnd="@dimen/min_margin"
            android:id="@+id/tv_post_body"
            tools:text="@string/lorem_ipsum"
            android:textSize="@dimen/post_body_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_margin"/>
        <ImageView
            android:contentDescription="@string/photo_descr"
            android:id="@+id/img_post_photo"
            app:srcCompat="@drawable/post_example"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>