<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ly_post_main"
    tools:context=".PostActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include
                android:id="@+id/ly_post"
                layout="@layout/post_layout"/>
            <LinearLayout
                android:id="@+id/progressbar"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:padding="@dimen/def_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/text_loadign_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="@dimen/def_margin"
                android:layout_marginStart="@dimen/min_margin"
                android:id="@+id/tv_post_comments_count"
                tools:text="@string/text_comentarios"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="10"
                tools:listitem="@layout/comment_layout"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_new_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginBottom="@dimen/def_margin"
        app:srcCompat="@drawable/ic_comment"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/comment_descr" />

</RelativeLayout>